--- a/dev/tutorials/using_modeling_toolkit/index.html
+++ b/dev/tutorials/using_modeling_toolkit/index.html
@@ -73,7 +73,7 @@ Parameters (8):
  y1(t) ~ C(t)
  y2(t) ~ N_inv</code><br/><code class="language-julia-repl hljs" style="display:block;">julia&gt; @time global_id = assess_identifiability(ode, measured_quantities = measured_quantities)</code><code class="nohighlight hljs ansi" style="display:block;">[ Info: Preproccessing `ModelingToolkit.AbstractTimeDependentSystem` object
 [ Info: Assessing local identifiability
-[ Info: Local identifiability assessed in 0.290137285 seconds
+[ Info: Local identifiability assessed in 0.228019562 seconds
 [ Info: Assessing global identifiability
 [ Info: Computing IO-equations
 [ Info: Computing in Groebner.Lex() order, result is in Groebner.Lex() order
@@ -86,7 +86,6 @@ Parameters (8):
 [ Info: 2: selected lucky prime 2147483659
 [ Info: CRT modulo (2147483647, 2147483659)
 [ Info: Reconstructing modulo 4611686039902224373
-[ Info: Heuristic check failed.
 [ Info: 3: selected lucky prime 2147483693
 [ Info: CRT modulo (4611686039902224373, 2147483693)
 [ Info: Reconstructing modulo 9903520567925774155444649489
@@ -97,7 +96,6 @@ Parameters (8):
 [ Info: 5: selected lucky prime 2147483743
 [ Info: CRT modulo (21267649120981110191733715050621272657, 2147483743)
 [ Info: Reconstructing modulo 45671930739135174346839766056203605080877915151
-[ Info: Heuristic check failed.
 [ Info: 6: selected lucky prime 2147483777
 [ Info: CRT modulo (45671930739135174346839766056203605080877915151, 2147483777)
 [ Info: Reconstructing modulo 98079730326560405919904968824172512120100095704355005327
@@ -166,17 +164,17 @@ Parameters (8):
 [ Info: Using fglm: false
 [ Info: Computing in Groebner.Lex() order, result is in Groebner.Lex() order
 [ Info: Using fglm: false
-┌ Info: Computed in 32.166105244 seconds
+┌ Info: Computed in 25.71818212 seconds
 │   :ioeq_time = :ioeq_time
-└   ioeq_time = 32.166105244
+└   ioeq_time = 25.71818212
 [ Info: Computing Wronskians
-┌ Info: Computed in 19.05823967 seconds
+┌ Info: Computed in 14.365167044 seconds
 │   :wrnsk_time = :wrnsk_time
-└   wrnsk_time = 19.05823967
+└   wrnsk_time = 14.365167044
 [ Info: Dimensions of the Wronskians [1282, 2]
-┌ Info: Ranks of the Wronskians computed in 0.543587832 seconds
+┌ Info: Ranks of the Wronskians computed in 0.417316236 seconds
 │   :rank_time = :rank_time
-└   rank_times = 0.543587832
+└   rank_times = 0.417316236
 [ Info: Assessing global identifiability using the coefficients of the io-equations
 [ Info: Computing in Groebner.DegRevLex() order, result is in Groebner.DegRevLex() order
 [ Info: Using fglm: false
@@ -217,7 +215,8 @@ Parameters (8):
 [ Info: Selected 1 pairs
 [ Info: CRT modulo (1, 2147483647)
 [ Info: Reconstructing modulo 2147483647
-[ Info: Heuristic check failed.
+[ Info: Heuristic check passed!
+[ Info: Randomized check failed.
 [ Info: 2: selected lucky prime 2147483659
 [ Info: Selected 18 pairs
 [ Info: Selected 8 pairs
@@ -274,6 +273,7 @@ Parameters (8):
 [ Info: Selected 5 pairs
 [ Info: CRT modulo (45671930739135174346839766056203605080877915151, 2147483777)
 [ Info: Reconstructing modulo 98079730326560405919904968824172512120100095704355005327
+[ Info: Heuristic check failed.
 [ Info: 7: selected lucky prime 2147483783
 [ Info: Selected 18 pairs
 [ Info: Selected 8 pairs
@@ -588,11 +588,11 @@ Parameters (8):
 [ Info: Using fglm: false
 [ Info: Computing in Groebner.DegRevLex() order, result is in Groebner.DegRevLex() order
 [ Info: Using fglm: false
-┌ Info: Computed in 42.024440836 seconds
+┌ Info: Computed in 35.465134552 seconds
 │   :check_time = :check_time
-└   check_time = 42.024440836
-[ Info: Global identifiability assessed in 93.79407749 seconds
- 96.566073 seconds (147.92 M allocations: 15.948 GiB, 10.52% gc time)
+└   check_time = 35.465134552
+[ Info: Global identifiability assessed in 75.967074763 seconds
+ 77.862320 seconds (147.96 M allocations: 16.010 GiB, 12.09% gc time)
 Dict{SymbolicUtils.BasicSymbolic{Real}, Symbol} with 8 entries:
   g1    =&gt; :globally
   q     =&gt; :nonidentifiable
@@ -601,4 +601,4 @@ Dict{SymbolicUtils.BasicSymbolic{Real}, Symbol} with 8 entries:
   b     =&gt; :globally
   g2    =&gt; :globally
   alpha =&gt; :globally
-  N_inv =&gt; :globally</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>K. Roosa and G. Chowell. <a href="https://doi.org/10.1186/s12976-018-0097-6"><em>Assessing parameter identifiability in compartmental dynamic models using a computational approach: application to infectious disease transmission models</em></a>, Theor Biol Med Model 16, 1 (2019)</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../global_identifiability/">« Global Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../../input/input/">Parsing input ODE system »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.24 on <span class="colophon-date" title="Saturday 1 July 2023 22:32">Saturday 1 July 2023</span>. Using Julia version 1.9.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  N_inv =&gt; :globally</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>K. Roosa and G. Chowell. <a href="https://doi.org/10.1186/s12976-018-0097-6"><em>Assessing parameter identifiability in compartmental dynamic models using a computational approach: application to infectious disease transmission models</em></a>, Theor Biol Med Model 16, 1 (2019)</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../global_identifiability/">« Global Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../../input/input/">Parsing input ODE system »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Friday 7 July 2023 10:15">Friday 7 July 2023</span>. Using Julia version 1.9.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
