--- a/dev/index.html
+++ b/dev/index.html
@@ -16,7 +16,7 @@ Pkg.add(&quot;StructuralIdentifiability&quot;)</code></pre><h2 id="Citation"><a 
 }</code></pre><h2 id="Feature-Summary"><a class="docs-heading-anchor" href="#Feature-Summary">Feature Summary</a><a id="Feature-Summary-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-Summary" title="Permalink"></a></h2><p><code>StructuralIdentifiability.jl</code> can assess local and global identifiability of ODE models. In addition to these straightforward identifiability queries on individual parameters, the package can distinguish between single- and multi-experiment identifiability.</p><h2 id="Feature-List"><a class="docs-heading-anchor" href="#Feature-List">Feature List</a><a id="Feature-List-1"></a><a class="docs-heading-anchor-permalink" href="#Feature-List" title="Permalink"></a></h2><ul><li>Local identifiability checks</li><li>Global identifiability checks</li><li>Assessment of identifiable functions of parameters</li></ul><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to StructuralIdentifiability.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged channel in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li><a href="https://gitter.im/JuliaDiffEq/Lobby">JuliaDiffEq</a> on Gitter</li><li>On the Julia Discourse forums</li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Project.toml`
   [6e4b80f9] BenchmarkTools v1.3.2
   [e30172f5] Documenter v0.27.25
-  [961ee093] ModelingToolkit v8.62.0
+  [961ee093] ModelingToolkit v8.63.0
   [220ca800] StructuralIdentifiability v0.4.10 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.9.2
 Commit e4ee485e909 (2023-07-05 09:39 UTC)
 Platform Info:
@@ -26,7 +26,7 @@ Platform Info:
   LIBM: libopenlibm
   LLVM: libLLVM-14.0.6 (ORCJIT, broadwell)
   Threads: 1 on 2 virtual cores</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl/docs/Manifest.toml`
-  [47edcb42] ADTypes v0.1.5
+  [47edcb42] ADTypes v0.1.6
   [a4c015fc] ANSIColoredPrinters v0.0.1
 ⌅ [c3fe647b] AbstractAlgebra v0.30.9
   [1520ce14] AbstractTrees v0.4.4
@@ -45,19 +45,19 @@ Platform Info:
   [a80b9123] CommonMark v0.8.12
   [38540f10] CommonSolve v0.2.4
   [bbf7d656] CommonSubexpressions v0.3.0
-  [34da2185] Compat v4.7.0
+  [34da2185] Compat v4.8.0
   [b152e2b5] CompositeTypes v0.1.3
-  [187b0558] ConstructionBase v1.5.2
+  [187b0558] ConstructionBase v1.5.3
   [adafc99b] CpuId v0.3.1
   [a8cc5b0e] Crayons v4.1.1
   [9a962f9c] DataAPI v1.15.0
   [864edb3b] DataStructures v0.18.14
   [e2d170a0] DataValueInterfaces v1.0.0
-  [2b5f629d] DiffEqBase v6.126.0
+  [2b5f629d] DiffEqBase v6.127.0
   [459566f4] DiffEqCallbacks v2.26.1
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
-  [b4f34e82] Distances v0.10.8
+  [b4f34e82] Distances v0.10.9
   [31c24e10] Distributions v0.25.98
   [ffbed154] DocStringExtensions v0.9.3
   [e30172f5] Documenter v0.27.25
@@ -66,8 +66,8 @@ Platform Info:
 ⌅ [7c1d4256] DynamicPolynomials v0.4.6
   [4e289a0a] EnumX v1.0.4
   [e2ba6199] ExprTools v0.1.9
-  [7034ab61] FastBroadcast v0.2.5
-  [1a297f60] FillArrays v1.3.0
+  [7034ab61] FastBroadcast v0.2.6
+  [1a297f60] FillArrays v1.5.0
   [6a86dc24] FiniteDiff v2.21.1
   [59287772] Formatting v0.4.2
   [f6369f11] ForwardDiff v0.10.35
@@ -76,21 +76,21 @@ Platform Info:
   [46192b85] GPUArraysCore v0.1.5
   [c27321d9] Glob v1.3.1
   [86223c79] Graphs v1.8.0
-  [0b43b601] Groebner v0.3.6
+⌅ [0b43b601] Groebner v0.3.6
   [d5909c97] GroupsCore v0.4.0
-  [34004b35] HypergeometricFunctions v0.3.17
+  [34004b35] HypergeometricFunctions v0.3.21
   [b5f81e59] IOCapture v0.2.3
   [615f187c] IfElse v0.1.1
   [d25df0c9] Inflate v0.1.3
   [18e54dd8] IntegerMathUtils v0.1.2
-  [8197267c] IntervalSets v0.7.4
+  [8197267c] IntervalSets v0.7.5
   [92d709cd] IrrationalConstants v0.2.2
   [c8e1da08] IterTools v1.8.0
   [82899510] IteratorInterfaceExtensions v1.0.0
   [692b3bcd] JLLWrappers v1.4.1
   [682c06a0] JSON v0.21.4
   [98e50ef6] JuliaFormatter v1.0.34
-  [ccbc3e58] JumpProcesses v9.6.3
+  [ccbc3e58] JumpProcesses v9.7.2
   [b964fa9f] LaTeXStrings v1.3.0
   [2ee39098] LabelledArrays v1.14.0
   [984bce1d] LambertW v0.4.6
@@ -103,7 +103,7 @@ Platform Info:
   [1914dd2f] MacroTools v0.5.10
   [d125e4d3] ManualMemory v0.1.8
   [e1d29d7a] Missings v1.1.0
-  [961ee093] ModelingToolkit v8.62.0
+  [961ee093] ModelingToolkit v8.63.0
   [46d2c3a1] MuladdMacro v0.2.4
 ⌅ [102ac46a] MultivariatePolynomials v0.4.7
   [d8a4904e] MutableArithmetics v1.3.0
@@ -111,46 +111,47 @@ Platform Info:
   [2774e3e8] NLsolve v4.5.1
   [77ba4419] NaNMath v1.0.2
 ⌅ [2edaba10] Nemo v0.34.7
-  [bac558e1] OrderedCollections v1.6.0
+  [bac558e1] OrderedCollections v1.6.2
   [90014a1f] PDMats v0.11.17
+  [65ce6f38] PackageExtensionCompat v1.0.0
   [d96e819e] Parameters v0.12.3
   [69de0a69] Parsers v2.7.1
   [e409e4f3] PoissonRandom v0.4.4
-  [f517fe37] Polyester v0.7.3
+  [f517fe37] Polyester v0.7.5
   [1d0040c9] PolyesterWeave v0.2.1
   [d236fae5] PreallocationTools v0.4.12
   [aea7be01] PrecompileTools v1.1.2
   [21216c6a] Preferences v1.4.0
-  [27ebfcd6] Primes v0.5.3
+  [27ebfcd6] Primes v0.5.4
   [1fd47b50] QuadGK v2.8.2
   [fb686558] RandomExtensions v0.4.3
   [e6cf234a] RandomNumbers v1.5.3
   [3cdcf5f2] RecipesBase v1.3.4
-  [731186ca] RecursiveArrayTools v2.38.5
+  [731186ca] RecursiveArrayTools v2.38.7
   [189a3867] Reexport v1.2.2
   [ae029012] Requires v1.3.0
   [79098fc4] Rmath v0.7.1
 ⌅ [7e49a35a] RuntimeGeneratedFunctions v0.5.9
   [94e857df] SIMDTypes v0.1.0
-  [0bca4576] SciMLBase v1.93.0
-  [c0aeaf25] SciMLOperators v0.3.3
+  [0bca4576] SciMLBase v1.94.0
+  [c0aeaf25] SciMLOperators v0.3.5
   [efcf1570] Setfield v1.1.1
-  [727e6d20] SimpleNonlinearSolve v0.1.16
+  [727e6d20] SimpleNonlinearSolve v0.1.18
   [699a6c99] SimpleTraits v0.9.4
   [66db9d55] SnoopPrecompile v1.0.3
   [a2af1166] SortingAlgorithms v1.1.1
   [276daf66] SpecialFunctions v2.3.0
-  [aedffcd0] Static v0.8.7
+  [aedffcd0] Static v0.8.8
   [0d7ed370] StaticArrayInterface v1.4.0
-  [90137ffa] StaticArrays v1.6.0
-  [1e83bf80] StaticArraysCore v1.4.0
+  [90137ffa] StaticArrays v1.6.2
+  [1e83bf80] StaticArraysCore v1.4.2
   [82ae8749] StatsAPI v1.6.0
   [2913bbd2] StatsBase v0.34.0
   [4c63d2b9] StatsFuns v1.3.0
-  [7792a7ef] StrideArraysCore v0.4.16
+  [7792a7ef] StrideArraysCore v0.4.17
   [220ca800] StructuralIdentifiability v0.4.10 `~/work/StructuralIdentifiability.jl/StructuralIdentifiability.jl`
   [2efcf032] SymbolicIndexingInterface v0.2.2
-  [d1185830] SymbolicUtils v1.0.5
+  [d1185830] SymbolicUtils v1.1.0
   [0c5d862f] Symbolics v5.5.0
   [3783bdb8] TableTraits v1.0.1
   [bd369af6] Tables v1.10.1
@@ -163,12 +164,12 @@ Platform Info:
   [5c2747f8] URIs v1.4.2
   [3a884ed6] UnPack v1.0.2
   [1986cc42] Unitful v1.15.0
-  [a7c27f48] Unityper v0.1.2
+  [a7c27f48] Unityper v0.1.5
   [700de1a5] ZygoteRules v0.2.3
   [e21ec000] Antic_jll v0.201.500+0
   [d9960996] Arb_jll v200.2300.0+0
   [fcfa6d1b] Calcium_jll v0.401.100+0
-  [e134572f] FLINT_jll v200.900.6+0
+  [e134572f] FLINT_jll v200.900.7+0
 ⌅ [656ef2d0] OpenBLAS32_jll v0.3.21+0
   [efe28fd5] OpenSpecFun_jll v0.5.5+0
   [f50d1b31] Rmath_jll v0.4.0+0
@@ -222,4 +223,4 @@ Platform Info:
   [3f19e933] p7zip_jll v17.4.0+0
 Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details>You can also download the 
 <a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.10/assets/Manifest.toml">manifest</a> file and the
-<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.10/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/local_identifiability/">Local Identifiability of Differential Models »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Friday 7 July 2023 10:18">Friday 7 July 2023</span>. Using Julia version 1.9.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<a href="https://github.com/SciML/StructuralIdentifiability.jl/tree/gh-pages/v0.4.10/assets/Project.toml">project</a> file.</article><nav class="docs-footer"><a class="docs-footer-nextpage" href="tutorials/local_identifiability/">Local Identifiability of Differential Models »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 27 July 2023 10:57">Thursday 27 July 2023</span>. Using Julia version 1.9.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
