--- a/dev/tutorials/using_modeling_toolkit/index.html
+++ b/dev/tutorials/using_modeling_toolkit/index.html
@@ -73,7 +73,7 @@ Parameters (8):
  y1(t) ~ C(t)
  y2(t) ~ N_inv</code><br/><code class="language-julia-repl hljs" style="display:block;">julia&gt; @time global_id = assess_identifiability(ode, measured_quantities = measured_quantities)</code><code class="nohighlight hljs ansi" style="display:block;">[ Info: Preproccessing `ModelingToolkit.AbstractTimeDependentSystem` object
 [ Info: Assessing local identifiability
-[ Info: Local identifiability assessed in 0.241252793 seconds
+[ Info: Local identifiability assessed in 0.251350739 seconds
 [ Info: Assessing global identifiability
 [ Info: Computing IO-equations
 [ Info: Computing in Groebner.Lex() order, result is in Groebner.Lex() order
@@ -82,10 +82,12 @@ Parameters (8):
 [ Info: 1: selected lucky prime 2147483647
 [ Info: CRT modulo (1, 2147483647)
 [ Info: Reconstructing modulo 2147483647
-[ Info: Heuristic check failed.
+[ Info: Heuristic check passed!
+[ Info: Randomized check failed.
 [ Info: 2: selected lucky prime 2147483659
 [ Info: CRT modulo (2147483647, 2147483659)
 [ Info: Reconstructing modulo 4611686039902224373
+[ Info: Heuristic check failed.
 [ Info: 3: selected lucky prime 2147483693
 [ Info: CRT modulo (4611686039902224373, 2147483693)
 [ Info: Reconstructing modulo 9903520567925774155444649489
@@ -98,11 +100,13 @@ Parameters (8):
 [ Info: 6: selected lucky prime 2147483777
 [ Info: CRT modulo (45671930739135174346839766056203605080877915151, 2147483777)
 [ Info: Reconstructing modulo 98079730326560405919904968824172512120100095704355005327
+[ Info: Heuristic check failed.
 [ Info: 7: selected lucky prime 2147483783
 [ Info: CRT modulo (98079730326560405919904968824172512120100095704355005327, 2147483783)
 [ Info: 8: selected lucky prime 2147483813
 [ Info: CRT modulo (210624630317301765882893117451031048172285903861850336414611112041, 2147483813)
 [ Info: Reconstructing modulo 452312984225514596069828623335196996110407213751397785678981819797976892333
+[ Info: Heuristic check failed.
 [ Info: 9: selected lucky prime 2147483857
 [ Info: CRT modulo (452312984225514596069828623335196996110407213751397785678981819797976892333, 2147483857)
 [ Info: 10: selected lucky prime 2147483867
@@ -161,17 +165,17 @@ Parameters (8):
 [ Info: Using fglm: false
 [ Info: Computing in Groebner.Lex() order, result is in Groebner.Lex() order
 [ Info: Using fglm: false
-┌ Info: Computed in 27.280952863 seconds
+┌ Info: Computed in 28.069975811 seconds
 │   :ioeq_time = :ioeq_time
-└   ioeq_time = 27.280952863
+└   ioeq_time = 28.069975811
 [ Info: Computing Wronskians
-┌ Info: Computed in 16.962410807 seconds
+┌ Info: Computed in 17.22525336 seconds
 │   :wrnsk_time = :wrnsk_time
-└   wrnsk_time = 16.962410807
+└   wrnsk_time = 17.22525336
 [ Info: Dimensions of the Wronskians [1282, 2]
-┌ Info: Ranks of the Wronskians computed in 0.492611969 seconds
+┌ Info: Ranks of the Wronskians computed in 0.533511408 seconds
 │   :rank_time = :rank_time
-└   rank_times = 0.492611969
+└   rank_times = 0.533511408
 [ Info: Assessing global identifiability using the coefficients of the io-equations
 [ Info: Computing in Groebner.DegRevLex() order, result is in Groebner.DegRevLex() order
 [ Info: Using fglm: false
@@ -333,6 +337,7 @@ Parameters (8):
 [ Info: Selected 5 pairs
 [ Info: CRT modulo (4479492181457132340213454847299227207974448018628682717127999033421525005319580445599067818799052246163, 2147483887)
 [ Info: Reconstructing modulo 9619637281621671881834996425177135896677125027724171971067756840824299427891388292524278203091200389506200075581
+[ Info: Heuristic check failed.
 [ Info: 13: selected lucky prime 2147483893
 [ Info: Selected 18 pairs
 [ Info: Selected 8 pairs
@@ -583,11 +588,11 @@ Parameters (8):
 [ Info: Using fglm: false
 [ Info: Computing in Groebner.DegRevLex() order, result is in Groebner.DegRevLex() order
 [ Info: Using fglm: false
-┌ Info: Computed in 37.509309309 seconds
+┌ Info: Computed in 38.468908876 seconds
 │   :check_time = :check_time
-└   check_time = 37.509309309
-[ Info: Global identifiability assessed in 82.246991371 seconds
- 84.430000 seconds (148.05 M allocations: 15.945 GiB, 10.88% gc time)
+└   check_time = 38.468908876
+[ Info: Global identifiability assessed in 84.299210268 seconds
+ 86.816127 seconds (147.96 M allocations: 15.950 GiB, 10.55% gc time)
 Dict{SymbolicUtils.BasicSymbolic{Real}, Symbol} with 8 entries:
   g1    =&gt; :globally
   q     =&gt; :nonidentifiable
@@ -596,4 +601,4 @@ Dict{SymbolicUtils.BasicSymbolic{Real}, Symbol} with 8 entries:
   b     =&gt; :globally
   g2    =&gt; :globally
   alpha =&gt; :globally
-  N_inv =&gt; :globally</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>K. Roosa and G. Chowell. <a href="https://doi.org/10.1186/s12976-018-0097-6"><em>Assessing parameter identifiability in compartmental dynamic models using a computational approach: application to infectious disease transmission models</em></a>, Theor Biol Med Model 16, 1 (2019)</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../global_identifiability/">« Global Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../../input/input/">Parsing input ODE system »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Friday 7 July 2023 10:18">Friday 7 July 2023</span>. Using Julia version 1.9.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  N_inv =&gt; :globally</code></pre><section class="footnotes is-size-7"><ul><li class="footnote" id="footnote-1"><a class="tag is-link" href="#citeref-1">1</a><blockquote><p>K. Roosa and G. Chowell. <a href="https://doi.org/10.1186/s12976-018-0097-6"><em>Assessing parameter identifiability in compartmental dynamic models using a computational approach: application to infectious disease transmission models</em></a>, Theor Biol Med Model 16, 1 (2019)</p></blockquote></li></ul></section></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../global_identifiability/">« Global Identifiability of Differential Models</a><a class="docs-footer-nextpage" href="../../input/input/">Parsing input ODE system »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.25 on <span class="colophon-date" title="Thursday 27 July 2023 10:57">Thursday 27 July 2023</span>. Using Julia version 1.9.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
